[metadata]
name = qiskit_trebugger
version = 1.1.2
author = Egretta Thula, Harshit Gupta
author_email = harshit.11235@gmail.com
description = A timeline debugger for the qiskit transpiler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheGupta2012/qiskit-timeline-debugger
    
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    ipython>=8.12.0
    ipywidgets==8.0.5
    qiskit>=1.0
    qiskit-aer>=0.13.3
    tabulate==0.9.0
    matplotlib>=3.3
    pylatexenc>=1.4

[options.extras_require]
test = qiskit_ibm_runtime>=0.20

[options.package_data] # add the logo file to the package
* = views/widget/resources/*.png

[options.packages.find]
where = src